--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/poppins": "^4.5.10",
     "@mui/icons-material": "^5.2.4",
+    "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.2.3",
     "@mui/styles": "^5.2.3",
     "@testing-library/jest-dom": "^5.16.1",
@@ -14,15 +15,22 @@
     "@testing-library/user-event": "^12.8.3",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
+    "font-awesome": "^4.7.0",
     "material-icons": "^1.10.4",
     "react": "^17.0.2",
+    "react-async": "^10.0.1",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.1.1",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
