--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@fontsource/poppins": "^4.5.10",
+    "@material-ui/core": "^5.0.0-beta.5",
     "@mui/icons-material": "^5.2.4",
     "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.2.3",
@@ -14,10 +15,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "animate.css": "^4.1.1",
+    "apexcharts": "^3.40.0",
     "axios": "^1.4.0",
     "font-awesome": "^4.7.0",
     "material-icons": "^1.10.4",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-async": "^10.0.1",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
