--- a/package.json
+++ b/package.json
@@ -5,35 +5,39 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
-    "@fontsource/poppins": "^4.5.10",
-    "@material-ui/core": "^5.0.0-beta.5",
+    "@fontsource/poppins": "^4.5.0",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
     "@mui/icons-material": "^5.2.4",
-    "@mui/lab": "^5.0.0-alpha.129",
+    "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.2.3",
     "@mui/styles": "^5.2.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "animate.css": "^4.1.1",
-    "apexcharts": "^3.40.0",
-    "axios": "^1.4.0",
-    "font-awesome": "^4.7.0",
+    "apexcharts": "^3.33.1",
+    "axios": "^0.24.0",
+    "draft-js": "^0.11.7",
+    "jodit-react": "^1.2.6",
     "material-icons": "^1.10.4",
     "react": "^17.0.2",
-    "react-apexcharts": "^1.4.0",
+    "react-apexcharts": "^1.3.9",
     "react-async": "^10.0.1",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
-    "react-redux": "^8.0.5",
-    "react-responsive": "^9.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-material-ui-form-validator": "^3.0.0",
+    "react-redux": "^7.2.9",
+    "react-responsive": "^9.0.0-beta.5",
     "react-router-dom": "^6.1.1",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.2",
+    "redux-thunk": "^2.4.1",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2",
-    "yup": "^1.1.1"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
